# Backend-lab

./: CMakeLists.txt  README.md
1. Proactor/: Readme.md  http_conn.cpp  http_conn.h  locker.h  main.cpp  threadpool.h
1. Proactor/resources/: index.html
1. Proactor/webbench-1.5/: webbench
2. AsyncServer/inc/: AsyncServer.h  apiexample.h
2. AsyncServer/src/: Session.cpp  apiexample.cpp
3. AsyncServerIOservicepool/inc/: const.h
3. AsyncServerIOservicepool/src/: MsgNode.cpp  Server.cpp
4. CoroutineAsyncServer/inc/: MsgNode.h  Server.h  Singleton.h
4. CoroutineAsyncServer/src/: JsonClient.cpp  Server.cpp  Session.cpp
5. HTTPserver/: CMakeLists.txt
6. WebSocketServer/: CMakeLists.txt
6. WebSocketServer/inc/: Connection.h  ConnectionMgr.h  Server.h
6. WebSocketServer/src/: Connection.cpp  ConnectionMgr.cpp  Server.cpp  beast_websocket.cpp
AsyncServer/: CMakeLists.txt
AsyncServerIOservicepool/: CMakeLists.txt
AsyncServerIOservicepool/inc/: IOservicePool.h  MsgNode.h  Server.h  Session.h  Singleton.h  const.h
AsyncServerIOservicepool/src/: IOservicePool.cpp  JsonClient.cpp  Server.cpp  Session.cpp  main.cpp
CoroutineAsyncServer/: CMakeLists.txt
CoroutineAsyncServer/inc/: IOservicePool.h  Session.h  const.h  logicsystem.h
CoroutineAsyncServer/src/: CoroutineServer.cpp  IOservicePool.cpp  MsgNode.cpp  logicsystem.cpp
inc/: Session.h
src/: AsyncServer.cpp  main.cpp  syncclient.cpp  syncserver.cpp
